--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ if(CONFIG_LVGL_DISPLAY_TDISPLAY_S3)
     list(APPEND COMPONET_SRC "boards/t-display-s3.cpp")
 endif()
 
+if(CONFIG_LVGL_DISPLAY_TTGO_TDISPLAY)
+    list(APPEND COMPONET_SRC "boards/ttgo-tdisplay.cpp")
+endif()
+
 idf_component_register(
     SRCS 
         ${COMPONET_SRC}
