Run github actions from main development branch.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: ESP-IDF component build
 
 on:
   push:
-    branches: [ main, feature/* ]
+    branches: [ main, feature/*, develop ]
     tags:
       - "*"
 
