examples: Ignore SDK config backups.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 examples/**/build
 examples/**/sdkconfig
 examples/**/sdkconfig.defaults
+examples/**/sdkconfig.old
 examples/**/dependencies.lock
 examples/**/managed_components
 .vscode/settings.json
